# pyGpxViewer

./: .flake8  .gitignore  LICENSE  Pipfile  README.md  cli.py  config.py  map_sources.json  meson.build  pygpxviewer.in  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: build.yml  docs.yml  python-app.yml  sphinx.yml
build-aux/meson/: postconf.py
data/: com.github.pygpxviewer.appdata.xml.in  com.github.pygpxviewer.desktop.in  com.github.pygpxviewer.gresource.xml  com.github.pygpxviewer.gschema.xml  fr.vcottineau.pygpxviewer.gresource.xml  fr.vcottineau.pygpxviewer.gschema.xml  meson.build  style.css
data/db/: db.sqlite
data/dem/: dem.json  dem.jsonschema
data/json/: map.json  map.jsonschema
data/map/: map.html  map.js  sources.json
data/ui/: AppMenu.ui  GpxColumnView.ui  GpxDetailedView.ui  HelpOverlay.ui  Window.ui  WindowSettings.ui  app_column_view.ui  app_gpx_details.glade  app_treeview.glade  app_webview.glade  app_window.glade  app_window_details.glade
docs/: conf.py  index.rst  requirements.txt
docs/source/: conf.py  index.rst  requirements.txt
po/: POTFILES  com.github.pygpxviewer.pot  fr.po  meson.build
pygpxviewer/: __init__.py  app_column_view.py  app_gpx_details.py  app_treeview.py  app_webview.html  app_webview.js  app_webview.py  app_window.py  app_window_details.py  application.py  clean_xml.xslt  config.py  gpx_helper.py  helper.py  helpers.py  logger.py  map.html  utils.py  window.py  workers.py
pygpxviewer/helpers/: downloadhelper.py  gpxhelper.py  sqlitehelper.py
pygpxviewer/threads/: workers.py
pygpxviewer/widgets/: appmenu.py  elevationprofile.py  gpxcolumnview.py  gpxdetailedview.py  shumatemap.py  windowsettings.py
resources/db/: db.py
tests/: test_sqlitehelper.py
